# WOS_JapaneseMOD

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST_v0.3.0.md  Run_Knapford.cmd  Run_SODOR.cmd  WOS_JapaneseMOD_Knapford.bat  WOS_JapaneseMOD_Knapford.command  WOS_JapaneseMOD_Knapford.ps1  WOS_JapaneseMOD_SODOR.bat  WOS_JapaneseMOD_SODOR.command  WOS_JapaneseMOD_SODOR.ps1  config.yaml
.github/workflows/: build-release-zips.yml  ci.yml  release.yml
MOD/TS2Prototype-WindowsNoEditor/Engine/Content/EngineFonts/: Roboto.uasset  Roboto.uexp
MOD/TS2Prototype-WindowsNoEditor/Engine/Content/EngineFonts/Faces/: Inter-Bold.uasset  Inter-Bold.uexp  Inter-BoldItalic.uasset  Inter-BoldItalic.uexp  Inter-Italic.uasset  Inter-Italic.uexp  Inter-Light.uasset  Inter-Light.uexp  Inter-Regular.uasset  Inter-Regular.uexp
MOD/TS2Prototype-WindowsNoEditor/TS2Prototype/Content/Core/Fonts/: FranklinGothicBook_Font.uasset  FranklinGothicBook_Font.uexp  PeachyKeenJF_Regular__1__Font.uasset  PeachyKeenJF_Regular__1__Font.uexp
WOS_JapaneseMOD_Knapford/Engine/Content/EngineFonts/: Roboto.uasset
WOS_JapaneseMOD_Knapford/TS2Prototype/Content/Core/Fonts/: PeachyKeenJF_Regular__1_.uexp  PeachyKeenJF_Regular__1_.ufont
WOS_JapaneseMOD_SODOR/Engine/Content/EngineFonts/Faces/: Inter-BoldItalic.uasset  Inter-Light.uexp  Inter-Regular.uasset  Inter-Regular.uexp
WOS_JapaneseMOD_SODOR/TS2Prototype-WindowsNoEditor/Engine/Content/EngineFonts/: Roboto.uexp
WOS_JapaneseMOD_SODOR/TS2Prototype/Content/Core/Fonts/: PeachyKeenJF_Regular__1_.uasset
src/: main.rs
(+79 files in other folders)
