[package]
name = "wosmod"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "WOS_JapaneseMOD"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
fs_extra = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
zip = "2"
